--- a/layoutfluido/estilo.css
+++ b/layoutfluido/estilo.css
@@ -12,7 +12,7 @@ header {
     margin-top: 1%;
 }
 nav {
-    width: 600px;
+    widdth: 600px;
     height: 200px;
     background-color: red;
     float: right;
